[package]
name = "tgbotapi"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2021"
description = "A library for working with the Telegram Bot API"
repository = "https://github.com/Syfaro/tgbotapi-rs"
readme = "README.md"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
httptest = "0.15"
tracing-subscriber = "0.3"
